# pricing-app

./: .gitignore  GOLD.csv  Master_Catalog_Final.csv  PLATINUM.csv  Pricing Rules Starter 1.xlsx  README.md  SILVER.csv  pyproject.toml  test_out.txt
data_archive/: BRONZE.csv  catalogs_export.csv  product_map.csv  products_export_1.csv
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/rules/: page.tsx
scripts/: build_all.py  create_ayf_rule.py  debug_policy.py  run_api.py  run_app.py
scripts/legacy/: app.py  build_catalog.py  pricing_engine.py
src/pricing_tool/: __init__.py
src/pricing_tool/api/: main.py  rules_api.py  state.py
src/pricing_tool/config/: settings.py
src/pricing_tool/data/: __init__.py  account_intel.csv  build_catalog.py  group_members.csv  program_map.csv
src/pricing_tool/data/outputs/: build_report.json
src/pricing_tool/engine/: __init__.py  models.py  pricing_engine.py  rule_matcher.py
src/pricing_tool/policy/: freight_rules.csv  order_policy_engine.py  program_resolver.py  program_rules.csv  terms_rules.csv  workflow_rules.csv
src/pricing_tool/rules/: __init__.py  compile_rules.py  compiled_rules.json  rule_schema.json  rules.csv
src/pricing_tool/services/: __init__.py  rules_service.py
src/pricing_tool/ui/: __init__.py  app_streamlit.py
tests/: generate_golden_cases.py  golden_cases.csv  test_golden_cases.py  test_period2_logic.py
