[project]
name = "pricing-tool"
version = "2.0.0"
description = "Pricing Calculation System for Customer Service operations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "streamlit>=1.28",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
pricing-build = "scripts.build_all:main"
pricing-app = "scripts.run_app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
